--- a/style.css
+++ b/style.css
@@ -12,12 +12,23 @@ body {
     justify-content: space-between;
     background-color: white;
     padding: 20px 25px;
+    position: relative;
+    
 }
+
+.navbar .right-section {
+    position: absolute;
+    right: 25px; /* Vendos hapësirën nga ana e djathtë */
+    bottom: 10px; /* Poziciono butonin në fund */
+    
+}
+
 
 .navbar a {
     color: black;
     text-decoration: none;
     padding: 10px 15px;
+
 }
 
 .navbar a:hover {
@@ -25,11 +36,8 @@ body {
     border-radius: 4px;
 }
 
-.navbar .left-links,
-.navbar .right-section {
-    display: flex;
-    align-items: center;
-}
+
+
 
 .navbar .left-links a {
     margin-right: 15px;
@@ -37,7 +45,7 @@ body {
 
 
 .login-btn {
-    background-color:lightpink;
+    background-color:white;
     color:black;
     background: transparent;
     padding: 10px 20px;
@@ -45,8 +53,92 @@ body {
     border-radius: 4px;
     cursor: pointer;
     font-size: 15px;
+    
 }
 
 .login-btn:hover {
-    background-color: lightpink;
+    background-color: white;
+ 
 }
+.full-page-image {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    object-fit: cover; /* Siguron që fotografia mbulon gjithë faqen */
+    z-index: -1; /* Vendos fotografinë pas përmbajtjes tjetër */
+}
+/*Login form*/
+*{
+    margin:0;
+    padding:0;
+    box-sizing:border-box;
+    font-family: Arial, Helvetica, sans-serif;
+
+}
+
+
+.container {
+    display: flex; /* Aktivizon Flexbox për këtë kontejner */
+    justify-content: center; /* Qendërzim horizontal */
+    align-items: center; /* Qendërzim vertikal */
+    height: 80vh; /* Lartësia e ekranit */
+    position: relative; /* Lejon pozicionimin korrekt të kutisë */
+    background-color: rgba(0, 0, 0, 0.05); /* Opsionale: sfond i lehtë për këtë zonë */
+  
+}
+
+
+
+.form-box {
+    width: 400px; /* Gjerësia e katrorit */
+    height: 350px;
+    padding: 20px; /* Hapësirë brenda kutisë */
+    border: 2px solid #ccc; /* Kufiri i kutisë */
+    border-radius: 10px; /* Skaje të rrumbullakosura */
+    background:transparent; /* Sfond i bardhë */
+    box-shadow: 20px 20px 8px rgba(0, 0, 0, 0.2); /* Hije për efekt 3D */
+    z-index: 10;
+    
+  
+}
+form input {
+    width: 100%; /* Mbush gjerësinë e plotë të kutisë */
+    padding: 10px;
+    margin-bottom: 15px;
+    border: 1px solid #ccc;
+    border-radius: 5px;
+    font-size: 14px;
+    outline: none;
+
+}
+
+
+/* Stilimi për butonin submit */
+button {
+    width: 100%;
+    padding: 12px;
+    border: none;
+    border-radius: 5px;
+    background-color:rgb(213, 169, 115);
+    color:black;
+    font-size: 16px;
+    cursor: pointer;
+    
+}
+
+button:hover {
+    background-color:white;
+}
+
+p {
+    font-size: 16px; /* Opsionale, për madhësinë e tekstit */
+}
+
+a {
+    margin-left: 20px; /* Krijon hapësirë midis tekstit dhe lidhjes */
+}
+
+
+
