--- a/style.css
+++ b/style.css
@@ -9,17 +9,33 @@ body {
 .navbar {
     display: flex;
     align-items: center;
-    justify-content: space-between;
     background-color: white;
     padding: 20px 25px;
     position: relative;
-    
 }
+
+.left-links{
+    max-width: 100%;
+}
+
+.left-links img{
+    max-width: 50%;
+    height: 50px;
+    align-items: center;
+    position: absolute;
+    text-align: center;
+    justify-content: center;
+    justify-items: center;
+    justify-self: center;
+    align-self: center;
+    align-content: center;
+}
+
 
 .navbar .right-section {
     position: absolute;
-    right: 25px; /* Vendos hapësirën nga ana e djathtë */
-    bottom: 10px; /* Poziciono butonin në fund */
+    right: 55px; /* Vendos hapësirën nga ana e djathtë */
+    bottom: 20px; /* Poziciono butonin në fund */
     
 }
 
@@ -27,7 +43,7 @@ body {
 .navbar a {
     color: black;
     text-decoration: none;
-    padding: 10px 15px;
+    padding: 5px 5px;
 
 }
 
@@ -48,7 +64,6 @@ body {
     background-color:white;
     color:black;
     background: transparent;
-    padding: 10px 20px;
     border: none;
     border-radius: 4px;
     cursor: pointer;
@@ -69,7 +84,7 @@ body {
     object-fit: cover; /* Siguron që fotografia mbulon gjithë faqen */
     z-index: -1; /* Vendos fotografinë pas përmbajtjes tjetër */
 }
-/*Login form*/
+/*Login form---------------------------------------------------*/
 *{
     margin:0;
     padding:0;
@@ -111,6 +126,7 @@ form input {
     border-radius: 5px;
     font-size: 14px;
     outline: none;
+    
 
 }
 
@@ -141,4 +157,6 @@ a {
 }
 
 
+
+/*sign up ------------------------------------------------------*/
 
