--- a/style.css
+++ b/style.css
@@ -14,11 +14,7 @@ body {
     position: relative;
 }
 
-.left-links{
-    max-width: 100%;
-}
-
-.left-links img{
+.navbar left-links img{
     max-width: 50%;
     height: 50px;
     align-items: center;
@@ -38,7 +34,6 @@ body {
     bottom: 20px; /* Poziciono butonin në fund */
     
 }
-
 
 .navbar a {
     color: black;
@@ -68,6 +63,7 @@ body {
     border-radius: 4px;
     cursor: pointer;
     font-size: 15px;
+   
     
 }
 
@@ -84,6 +80,11 @@ body {
     object-fit: cover; /* Siguron që fotografia mbulon gjithë faqen */
     z-index: -1; /* Vendos fotografinë pas përmbajtjes tjetër */
 }
+.navbar img{
+    width: 50px;
+    height:50px;
+}
+
 /*Login form---------------------------------------------------*/
 *{
     margin:0;
