--- a/style.css
+++ b/style.css
@@ -1,97 +1,59 @@
-
 body {
     margin: 0;
     font-family: Arial, sans-serif;
-    box-sizing: border-box;
-    
 }
-
-.navbar {
+/*navbar*/
+nav {
+    margin-top: 10px;
     display: flex;
-    align-items: center;
-    background-color: white;
-    padding: 20px 25px;
+    overflow: hidden;
+    background-color: beige;
     position: relative;
-}
-
-.navbar left-links img{
-    max-width: 50%;
-    height: 50px;
+    justify-content: space-between;
+    flex-direction: row;
+    height: 70px;
     align-items: center;
-    position: absolute;
-    text-align: center;
-    justify-content: center;
-    justify-items: center;
-    justify-self: center;
-    align-self: center;
-    align-content: center;
+    border-radius: 30px;
 }
 
-
-.navbar .right-section {
-    position: absolute;
-    right: 55px; /* Vendos hapësirën nga ana e djathtë */
-    bottom: 20px; /* Poziciono butonin në fund */
-    
-}
-
-.navbar a {
-    color: black;
-    text-decoration: none;
-    padding: 5px 5px;
-
-}
-
-.navbar a:hover {
-    background-color:lightpink;
-    border-radius: 4px;
-}
-
-
-
-
-.navbar .left-links a {
-    margin-right: 15px;
-}
-
-
-.login-btn {
-    background-color:white;
-    color:black;
-    background: transparent;
-    border: none;
-    border-radius: 4px;
-    cursor: pointer;
-    font-size: 15px;
-   
-    
-}
-
-.login-btn:hover {
-    background-color: white;
- 
-}
-.full-page-image {
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    object-fit: cover; /* Siguron që fotografia mbulon gjithë faqen */
-    z-index: -1; /* Vendos fotografinë pas përmbajtjes tjetër */
-}
-.navbar img{
+nav img{
     width: 50px;
-    height:50px;
+    height: auto;
+    margin-right: 400px;
 }
 
-/*Login form---------------------------------------------------*/
+a{
+    text-decoration: none;
+    color: black;
+}
+
+.left_links a{
+    padding: 30px;
+}
+
+nav a:hover{
+    color: white;
+    background-color: lightpink;
+    border-radius: 10px;
+}
+
+.login_btn{
+    background: transparent;
+    background-color: none;
+    border-style: none;
+}
+
+.login_btn a{
+    padding: 30px;
+}
+
+/*login --------------------------------------*/
+
 *{
     margin:0;
     padding:0;
     box-sizing:border-box;
     font-family: Arial, Helvetica, sans-serif;
-
 }
 
 
@@ -156,8 +118,3 @@ p {
 a {
     margin-left: 20px; /* Krijon hapësirë midis tekstit dhe lidhjes */
 }
-
-
-
-/*sign up ------------------------------------------------------*/
-
