--- a/style.css
+++ b/style.css
@@ -2,8 +2,10 @@
 
 body {
     margin: 0;
-    font-family: Arial, sans-serif;
+    font-family: Arial, sans-serif; 
+    background-color: beige;   
 }
+
 /*navbar*/
 nav {
     margin-top: 15px;
@@ -16,6 +18,7 @@ nav {
     height: 70px;
     align-items: center;
     border-radius: 30px;
+  
 }
 
 nav img{
@@ -35,7 +38,7 @@ a{
 
 nav a:hover{
     color: white;
-    background-color: lightpink;
+    background-color:rgb(189, 101, 101);
     border-radius: 10px;
 }
 
@@ -52,10 +55,41 @@ nav a:hover{
 #nje{
     background-image: url("home.jpeg");
     background-repeat: no-repeat;
-    background-size: 100% 650px;
+    background-size: cover;
     background-position: center;
-    height: 650px;
+    min-height: 650px;
     width: 100vw;
     max-width: 100%;
     overflow: hidden;
+}
+
+/*fotot e para ---------------------*/
+
+.column {
+    float: left;
+    width: 20.33%;
+    padding: 10px;
+    flex: 1;
+    display: flex;
+    justify-content: center; 
+}
+
+.column img{
+    height:300px;
+   
+}
+
+.row::after {
+  content: "";
+  clear: both;
+  display: table;
+}
+
+.row {
+    display:flex;
+    justify-content: space-between;
+    gap:5px; 
+    padding-right: 50px;
+    padding-left: 50px;
+    padding-top: 200px;
 }
