--- a/style.css
+++ b/style.css
@@ -69,7 +69,9 @@ nav a:hover{
 .text{
     margin-left: 50px;
     font-family: 'Times New Roman', Times, serif;
-    margin-top: 50px;
+    margin-top: 90px;
+    font-family: Comic Sans MS ;
+    font-weight:normal;
 }
 
 .column {
@@ -98,14 +100,15 @@ nav a:hover{
     gap:5px; 
     padding-right: 50px;
     padding-left: 50px;
-    padding-top: 50px;
+    padding-top: 60px;
+    
 
 }
 
 .column1 {
     float: left;
     width: 20.33%;
-    padding: 10px;
+    padding: 0px;
     flex: 1;
     display: flex;
     justify-content: center; 
@@ -117,8 +120,15 @@ nav a:hover{
     gap:5px; 
     padding-right: 50px;
     padding-left: 50px;
-    padding-top: 200px;
+    padding-top: 230px;
+    padding-bottom: 200px;
 }
+
+.column1 img{
+    height:500px;
+   
+}
+
 /*contact us ------------*/
 
 .container1 {
