--- a/style.css
+++ b/style.css
@@ -11,17 +11,21 @@ body {
 /*navbar*/
 nav {
     margin-top: 15px;
-    display: flex;
-    overflow: hidden;
-    background-color: beige;
-    position: relative;
-    justify-content: space-between;
-    flex-direction: row;
+    position: fixed; /* Bën navbar-in të qëndrojë lart */
+    top: 0;
+    left: 0;
+    width: 100%;
     height: 70px;
+    z-index: 100; /* Siguron që navbar-i është mbi slideshow */
+    display: flex;
+    justify-content: space-between;
     align-items: center;
+    background-color: beige;
     border-radius: 30px;
-  
+    overflow: hidden;
+    padding: 0 20px;
 }
+
 
 nav img{
     width: 50px;
@@ -56,7 +60,7 @@ nav a:hover{
 }
 
 #nje{
-    background-image: url("home.jpeg");
+
     background-repeat: no-repeat;
     background-size: cover;
     background-position: center;
@@ -65,7 +69,7 @@ nav a:hover{
     max-width: 100%;
     overflow: hidden;
 }
-
+  
 /*fotot e para ---------------------*/
 .text{
     margin-left: 50px;
@@ -189,5 +193,76 @@ nav a:hover{
         width: 90%;
     }
 }
+/* Slideshow-----------------------------*/
+.slideshow-wrapper {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 70vh;
+}
+
+
+.slideshow-container {
+    max-width: 400px;
+    position: relative;
+    margin: auto;
+    border: 2px solid #ddd;
+    border-radius: 10px;
+    overflow: hidden;
+    background-color: #fff;
+    max-width: 97%;
+    height: 650px;
+  }
+  
+
+  .prev, .next {
+    cursor: pointer;
+    position: absolute;
+    top: 50%;
+    width: auto;
+    margin-top: -22px;
+    padding: 16px;
+    color: white;
+    font-weight: bold;
+    font-size: 18px;
+    transition: 0.6s ease;
+    border-radius: 0 3px 3px 0;
+    user-select: none;
+  }
+  
+ 
+  .next {
+    right: 0;
+    border-radius: 3px 0 0 3px;
+  }
+  
+ 
+  .prev:hover, .next:hover {
+    background-color: rgba(0,0,0,0.8);
+  }
+  
+ 
+  
+  
+  .numbertext {
+    color: #f2f2f2;
+    font-size: 12px;
+    padding: 8px 12px;
+    position: absolute;
+    top: 0;
+  }
+  
+
+  
+ 
+  .fade {
+    animation-name: fade;
+    animation-duration: 1.5s;
+  }
+  
+  @keyframes fade {
+    from {opacity: .4}
+    to {opacity: 1}
+  }
 
 
