--- a/css/style.css
+++ b/css/style.css
@@ -91,6 +91,10 @@ nav a:hover{
     height:300px;
    
 }
+
+.column div p{
+    margin-top: 0px;
+}
 .row {
     display:flex;
     justify-content: space-between;
@@ -271,6 +275,10 @@ nav a:hover{
     height:300px;
    
 }
+
+.columnflex div p{
+    margin-top: 0px;
+}
 .rowflex::after {
     content: "";
     clear: both;
@@ -331,6 +339,9 @@ nav a:hover{
 .column1 img{
     height: 300px;
 }
+.column1 div p{
+    margin-top: 0px;
+}
 .row1{
     display:flex;
     justify-content: center;
@@ -339,4 +350,34 @@ nav a:hover{
     padding-left: 50px;
     padding-top: 20px;
     padding-bottom: 10px;
+}
+
+
+/*Dashboard----------------------*/
+
+.sidebar_main{
+    display: inline-block;
+    text-align: center;
+    background-color:brown;
+    height: 100vh;
+    width: 20%;
+}
+
+.dash_emri{
+    text-align: center;
+}
+
+.sidebar_main img{
+    margin-top: 20px;
+    width: 200px;
+    height: 200px;    
+}
+
+.dash_emri2{
+    margin-top: 100px;
+    text-align: center;
+}
+
+.dash_emri2 h3{
+    padding-top: 10px;
 }
