--- a/css/style.css
+++ b/css/style.css
@@ -14,7 +14,7 @@ nav {
     position: absolute; /* Bën navbar-in të qëndrojë lart */
     top: 0;
     left: 0;
-    width: 97.2%;
+    width: 100%;
     height: 70px;
     z-index: 100; /* Siguron që navbar-i është mbi slideshow */
     display: flex;
@@ -46,6 +46,11 @@ nav a:hover{
     color: white;
     background-color:rgb(189, 101, 101);
     border-radius: 10px;
+}
+
+.logo{
+    width: 40px;
+    height: auto;
 }
 
 .login_btn{
@@ -355,6 +360,12 @@ nav a:hover{
 
 /*Dashboard----------------------*/
 
+    .table-container {
+        width: 100%; /* Mund ta rregullosh sipas dëshirës */
+        max-height: 500px; /* Kufizon lartësinë e tabelës */
+        overflow-y: auto; /* Shton scroll vetëm në drejtimin vertikal */
+    }
+
 
 .sidebar_main{
     display: inline-block;
@@ -381,6 +392,7 @@ nav a:hover{
 
 .dash_emri2 h3{
     padding-top: 10px;
+    cursor: pointer;
 }
 /*product form------------------*/
 
