--- a/css/style.css
+++ b/css/style.css
@@ -325,36 +325,45 @@ nav a:hover{
 
 /*product accessories*/
 
-.teksti_par {
-    padding-top: 30px;
-    padding-right: 50px;
-    margin-top: 50px;
-    white-space: normal; /* Normalizimi i hapësirës */
-    max-width: 90%; /* Kufizimi i gjerësisë për të mos kaluar jashtë */
-}
-
-
-.column1{
+.columnflex1 {
     width: 20.33%;
     padding: 30px;
     flex: 1;
     display: inline-block;
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     justify-content: center;
 }
-.column1 img{
-    height: 300px;
+
+.columnflex1 img{
+    height:300px;
+      
 }
-.column1 div p{
+
+.columnflex1 div p{
     margin-top: 0px;
 }
-.row1{
+.rowflex1::after {
+    content: "";
+    clear: both;
+    display: table;
+  }
+
+  .rowflex1 {
     display:flex;
     justify-content: center;
     gap:5px; 
     padding-right: 50px;
     padding-left: 50px;
     padding-top: 20px;
-    padding-bottom: 10px;
+
+}
+
+.teksti_par {
+    padding-top: 30px;
+    padding-right: 50px;
+    margin-top: 50px;
+    white-space: normal; /* Normalizimi i hapësirës */
+    max-width: 90%; /* Kufizimi i gjerësisë për të mos kaluar jashtë */
 }
 
 
@@ -366,6 +375,11 @@ nav a:hover{
         overflow-y: auto; /* Shton scroll vetëm në drejtimin vertikal */
     }
 
+    .table-container1{
+        width: 100%; /* Mund ta rregullosh sipas dëshirës */
+        max-height: 500px; /* Kufizon lartësinë e tabelës */
+        overflow-y: auto; /* Shton scroll vetëm në drejtimin vertikal */
+    }
 
 .sidebar_main{
     display: inline-block;
@@ -403,7 +417,9 @@ nav a:hover{
     font-family: Arial, Helvetica, sans-serif;
 }
 
-
+.table-container{
+    margin-right: 200px;
+}
 
 .container2 {
     display: flex; /* Aktivizon Flexbox për këtë kontejner */
@@ -411,7 +427,6 @@ nav a:hover{
     align-items: center; /* Qendërzim vertikal */
     position: relative; /* Lejon pozicionimin korrekt të kutisë */
     background-color: rgba(0, 0, 0, 0.05); /* Opsionale: sfond i lehtë për këtë zonë */
-  
 }
 
 
@@ -437,4 +452,48 @@ form input {
     outline: none;
     
 
+}
+
+/*product_accesories--------------------------*/
+
+*{
+    margin:0;
+    padding:0;
+    box-sizing:border-box;
+    font-family: Arial, Helvetica, sans-serif;
+}
+
+
+
+.container3 {
+    display: flex; /* Aktivizon Flexbox për këtë kontejner */
+    justify-content: center; /* Qendërzim horizontal */
+    align-items: center; /* Qendërzim vertikal */
+    position: relative; /* Lejon pozicionimin korrekt të kutisë */
+    background-color: rgba(0, 0, 0, 0.05); /* Opsionale: sfond i lehtë për këtë zonë */
+    margin-left: 150px;
+}
+
+
+.form-box3 {
+    width: 400px; /* Gjerësia e katrorit */
+    height: 350px;
+    padding: 20px; /* Hapësirë brenda kutisë */
+    border: 2px solid #ccc; /* Kufiri i kutisë */
+    border-radius: 10px; /* Skaje të rrumbullakosura */
+    background:transparent; /* Sfond i bardhë */
+    box-shadow: 0px 20px 8px rgba(0, 0, 0, 0.2); /* Hije për efekt 3D */
+    z-index: 10;
+    margin-right: 100px;
+  
+}
+form input {
+    width: 100%; /* Mbush gjerësinë e plotë të kutisë */
+    padding: 10px;
+    margin-bottom: 15px;
+    border: 1px solid #ccc;
+    border-radius: 5px;
+    font-size: 14px;
+    outline: none;
+    
 }
